# test-cmake-template

./: .gitignore  Dockerfile  README.md
.github/workflows/: cmake.yml
ProjectFolder/: CMakeLists.txt  CMakePresets.json
ProjectFolder/scripts/: cmake_build.sh  make_debug.sh  make_release.sh  run_tests.sh
ProjectFolder/src/binary/: CMakeLists.txt  main.cpp
ProjectFolder/src/lib/utility/: CMakeLists.txt
ProjectFolder/src/lib/utility/include/utility/: utility.h
ProjectFolder/src/lib/utility/src/: utility.cpp
ProjectFolder/tests/: CMakeLists.txt  test_utility.cpp  test_utility.h
